# Cisco_Learning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  devnet_sbx_testbed.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: settings.yml
.github/workflows/: default.yml
ansible/: ansible.cfg
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/nxos/: all.yml
ansible/playbooks/: nxos.yml  nxos_facts.yml
python/: parse.py
python/nxos/: get_sys_info.py
