[tool.poetry]
name = "cisco_learning"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.6.0"
paramiko = "^2.7.2"
pyats = {extras = ["full"], version = "^21.9"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
